<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.androidedu.kodluyoruzakademi.androquiz.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_weight="0.37"
        android:gravity="center"
        android:text="@string/hosgeldiniz"
        android:textAlignment="center"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:text="@string/kullaniciadi"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="328dp"
        android:layout_height="40dp"
        android:digits="AaBbCcÇçDdEeFfGgĞğHhİiIıJjKkLlMmNnOoÖöPpRrSsŞşTtUuÜüVvYyZz"
        android:ems="10"
        android:hint="@string/alfanumeric"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textAllCaps="false"
        tools:textAllCaps="false" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:text="@string/sifre"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="328dp"
        android:layout_height="40dp"
        android:layout_weight="0.10"
        android:ems="10"
        android:inputType="textPassword" />

    <FrameLayout
        android:layout_width="356dp"
        android:layout_height="56dp">

    </FrameLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@android:dimen/notification_large_icon_width"
        android:clickable="false"
        android:onClick="OnClick"
        android:text="@string/girisbutton"
        android:textAlignment="center" />


</LinearLayout>
