<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.androidedu.kodluyoruzakademi.androquiz.QuizActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context="com.androidedu.kodluyoruzakademi.androquiz.QuizActivity">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:text="@string/question"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/choicea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:text="@string/choicea"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/choiceb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/choiceb"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/choicec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/choicec"
                android:textSize="20sp" />


            <RadioButton
                android:id="@+id/choiced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/choiced"
                android:textSize="20sp" />

        </RadioGroup>


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:onClick="onClick"
            android:text="@string/devambutton"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/score"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:text="@string/comm_0_0"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    </LinearLayout>


</LinearLayout>


